--- a/CssDisenioWebResponsive_Carlos_Desiderio/css/estilos.css
+++ b/CssDisenioWebResponsive_Carlos_Desiderio/css/estilos.css
@@ -12,52 +12,101 @@ img
   -webkit-box-shadow: 2px 2px 0 #02010a;
 }
 
-/*CG: 4 . Crea un div llamado contenido que este centrado y que
- tenga máximo 900px de ancho para desktop y ocupará el 100%
- para móviles.*/
-.Contenido
+div
 {
-  align-self: center;
-  max-width: 900px;
-  /*??? 100% movil*/
-}
-.cabecera
-{
-  background-color: #5b7989;
-  border-radius: 10px;
+    border-style: dotted ;
 
 }
+
 .titulo
 {
   text-align: left;
   color: white;
   text-shadow: 2px 2px #02010a;
 }
-.imagenCentral
+
+.cabecera
 {
-  width: 100%;
-  border-style: dotted ;
-  color:white;
+  background-color: #5b7989;
+  border-radius: 10px;
+
 }
 
+.imagenCentral
+{
+  background-color: #82c3a6;
+
+}
 .imagenCentral img
 {
   display: block;
   margin: auto;
 }
+
+
+/*CG: 4 . Crea un div llamado contenido que este centrado y que
+ tenga máximo 900px de ancho para desktop y ocupará el 100%
+ para móviles.*/
+.Contenido
+{
+  align-self: center;
+  background-color: #82c3a6;
+  margin: 0;
+	padding: 0;
+	width: 100%;
+  /*??? 100% movil*/
+}
+
+.imagenesSecundarias
+{
+  display: flex;
+  flex-direction: row;
+  background-color:  #d5c75f ;
+  border: 1px;
+}
+
+figcaption
+{
+  text-align: center;
+}
+
+.imagenCentral
+{
+  width: 100%;
+}
+.imagenDerecha img:hover
+{
+  transform: translate(20px,-5px);
+  -webkit-box-shadow: 2px 2px 0 #82c3a6;
+}
+.imagenIzquierda img:hover
+{
+    transform: rotate(10deg);
+    -webkit-box-shadow: 2px 2px 0 #82c3a6;
+}
+
+
+
 /*CG: 5. Utiliza media queries para manejar dos tamaños Desktop:
  con ancho de 900px o más y móvil con menos de 900px.*/
 @media (min-width:900px)
 {
-  p
+  .imagenDerecha, .imagenIzquierda
   {
-    color: red;
+    width: 50%;
+  }
+.cabecera, .imagenCentral
+{
+    width: 100%;
+}
+
+  .Contenido {
+  min-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
   }
 }
 @media (max-width:899px)
 {
-  p
-  {
-    color: blue;
-  }
+
 }
